--- a/html/learns/learn_project/nodemy/day_3/index.html
+++ b/html/learns/learn_project/nodemy/day_3/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modal without js</title>
+    <title>Modal use target pseudo</title>
     <link rel="stylesheet" href="./assets/css/main.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
     </style>
 </head>
 <body>
-    <button class="open-modal-btn">Open Modal</button>
-    <a href="#" id="modal">
+    <a href="#modal" class="open-modal-btn">Open Modal</a>
+    <div id="modal">
+        <a href="#" class="overlay"></a>
         <div class="modal_container">
             <div class="modal__header">
                 <p class="modal__header-text">Welcome to GMS</p>
@@ -25,6 +26,6 @@
                     <a href="#" class="modal__footer-btn">Close</a>
             </div>
         </div>
-    </a>
+    </div>
 </body>
 </html>
