--- a/html/learns/learn_project/nodemy/day_3/index.html
+++ b/html/learns/learn_project/nodemy/day_3/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modal use target pseudo</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/main.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
@@ -17,6 +18,9 @@
         <div class="modal_container">
             <div class="modal__header">
                 <p class="modal__header-text">Welcome to GMS</p>
+                <a href="#" class="modal__header-exit">
+                    <i class="fa-solid fa-xmark"></i>
+                </a>
             </div>
             <div class="modal__body">
                 <h2 class="modal__body-heading">Modal</h2>
