--- a/html/projects/Nature/index.html
+++ b/html/projects/Nature/index.html
@@ -10,28 +10,28 @@
 </head>
 <body>
     <div class="tour-nav">
-        <div class="tour-nav__img-wrap">
+        <div class="tour-nav__item">
             <img src="https://images.unsplash.com/photo-1475924156734-496f6cac6ec1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="img" class="tour-nav__img">
         </div>
-        <div class="tour-nav__img-wrap">
+        <div class="tour-nav__item">
             <img src="https://images.unsplash.com/photo-1433086966358-54859d0ed716?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1587&q=80" alt="img" class="tour-nav__img">
         </div>
-        <div class="tour-nav__img-wrap">
+        <div class="tour-nav__item">
             <img src="https://images.unsplash.com/photo-1475113548554-5a36f1f523d6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="img" class="tour-nav__img">
         </div>
-        <div class="tour-nav__img-wrap">
+        <div class="tour-nav__item">
             <img src="https://images.unsplash.com/photo-1505144808419-1957a94ca61e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=626&q=80" alt="img" class="tour-nav__img">
         </div>
-        <div class="tour-nav__img-wrap">
+        <div class="tour-nav__item">
             <img src="https://images.unsplash.com/photo-1439853949127-fa647821eba0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="img" class="tour-nav__img">
         </div>
-        <div class="tour-nav__img-wrap">
+        <div class="tour-nav__item">
             <img src="https://images.unsplash.com/photo-1431794062232-2a99a5431c6c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="img" class="tour-nav__img">
         </div>
-        <div class="tour-nav__img-wrap">
+        <div class="tour-nav__item">
             <img src="https://images.unsplash.com/photo-1497436072909-60f360e1d4b1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1632&q=80" alt="img" class="tour-nav__img">
         </div>
-        <div class="tour-nav__img-wrap">
+        <div class="tour-nav__item">
             <img src="https://images.unsplash.com/photo-1508459855340-fb63ac591728?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="img" class="tour-nav__img">
         </div>
 
