--- a/html/projects/Nature/index.html
+++ b/html/projects/Nature/index.html
@@ -9,33 +9,89 @@
     <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
-    <div class="tour-nav">
-        <div class="tour-nav__item">
-            <img src="https://images.unsplash.com/photo-1475924156734-496f6cac6ec1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="img" class="tour-nav__img">
+<div id="main">
+    <header class="header">
+           <div class="tour-nav">
+            <div class="tour-nav__item">
+                <img src="https://images.unsplash.com/photo-1475924156734-496f6cac6ec1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="img" class="tour-nav__img">
+            </div>
+            <div class="tour-nav__item">
+                <img src="https://images.unsplash.com/photo-1433086966358-54859d0ed716?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1587&q=80" alt="img" class="tour-nav__img">
+            </div>
+            <div class="tour-nav__item">
+                <img src="https://images.unsplash.com/photo-1475113548554-5a36f1f523d6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="img" class="tour-nav__img">
+            </div>
+            <div class="tour-nav__item">
+                <img src="https://images.unsplash.com/photo-1505144808419-1957a94ca61e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=626&q=80" alt="img" class="tour-nav__img">
+            </div>
+            <div class="tour-nav__item">
+                <img src="https://images.unsplash.com/photo-1439853949127-fa647821eba0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="img" class="tour-nav__img">
+            </div>
+            <div class="tour-nav__item">
+                <img src="https://images.unsplash.com/photo-1431794062232-2a99a5431c6c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="img" class="tour-nav__img">
+            </div>
+            <div class="tour-nav__item">
+                <img src="https://images.unsplash.com/photo-1497436072909-60f360e1d4b1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1632&q=80" alt="img" class="tour-nav__img">
+            </div>
+            <div class="tour-nav__item">
+                <img src="https://images.unsplash.com/photo-1508459855340-fb63ac591728?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="img" class="tour-nav__img">
+            </div>
+            <nav class="nav"></nav>
+        </div> 
+    </header>
+        
+    <div class="main">
+        <div class="tour">
+            <div class="tour__item">
+                <div class="tour__info">
+                    <h2 class="tour-heading">The pink noname beach</h2>
+                    <p class="tour__dsc">The secret beach</p>
+                </div>
+            </div>
+            <div class="tour__item">
+                <div class="tour__info">
+                    <h2 class="tour-heading">Columbia River Gorge National Scenic Area</h2>
+                    <p class="tour__dsc">A waterfall in Columbia river, America</p>
+                </div>
+            </div>
+            <div class="tour__item">
+                <div class="tour__info">
+                    <h2 class="tour-heading">The noname location</h2>
+                    <p class="tour__dsc">The secret location</p>
+                </div>
+            </div>
+            <div class="tour__item">
+                <div class="tour__info">
+                    <h2 class="tour-heading">The Maldives beach</h2>
+                    <p class="tour__dsc">A beach on Maldives</p>
+                </div>
+            </div>
+            <div class="tour__item">
+                <div class="tour__info">
+                    <h2 class="tour-heading">Banff National Park</h2>
+                    <p class="tour__dsc">A national park in Canada</p>
+                </div>
+            </div>
+            <div class="tour__item">
+                <div class="tour__info">
+                    <h2 class="tour-heading">zion national park</h2>
+                    <p class="tour__dsc">A national park in Utah, America</p>
+                </div>
+            </div>
+            <div class="tour__item">
+                <div class="tour__info">
+                    <h2 class="tour-heading">The noname forest</h2>
+                    <p class="tour__dsc">The secret forest</p>
+                </div>
+            </div>
+            <div class="tour__item">
+                <div class="tour__info">
+                    <h2 class="tour-heading">The noname waterfall</h2>
+                    <p class="tour__dsc">The secret waterfall</p>
+                </div>
+            </div>
         </div>
-        <div class="tour-nav__item">
-            <img src="https://images.unsplash.com/photo-1433086966358-54859d0ed716?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1587&q=80" alt="img" class="tour-nav__img">
-        </div>
-        <div class="tour-nav__item">
-            <img src="https://images.unsplash.com/photo-1475113548554-5a36f1f523d6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="img" class="tour-nav__img">
-        </div>
-        <div class="tour-nav__item">
-            <img src="https://images.unsplash.com/photo-1505144808419-1957a94ca61e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=626&q=80" alt="img" class="tour-nav__img">
-        </div>
-        <div class="tour-nav__item">
-            <img src="https://images.unsplash.com/photo-1439853949127-fa647821eba0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="img" class="tour-nav__img">
-        </div>
-        <div class="tour-nav__item">
-            <img src="https://images.unsplash.com/photo-1431794062232-2a99a5431c6c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="img" class="tour-nav__img">
-        </div>
-        <div class="tour-nav__item">
-            <img src="https://images.unsplash.com/photo-1497436072909-60f360e1d4b1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1632&q=80" alt="img" class="tour-nav__img">
-        </div>
-        <div class="tour-nav__item">
-            <img src="https://images.unsplash.com/photo-1508459855340-fb63ac591728?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="img" class="tour-nav__img">
-        </div>
-
-        <nav class="nav"></nav>
     </div>
+</div>
 </body>
 </html>
