--- a/html/learns/learn_project/W3school/architects/index.html
+++ b/html/learns/learn_project/W3school/architects/index.html
@@ -31,7 +31,10 @@
     </div>
     <div id="content">
         <div class="projects">
-            
+            <div class="projects__header">
+                <span class="projects__header-text">Projects</span>
+            </div>
+            .projects_
         </div>
     </div>
 </body>
