add projects item

--- a/html/learns/learn_project/W3school/architects/index.html
+++ b/html/learns/learn_project/W3school/architects/index.html
@@ -34,7 +34,40 @@
             <div class="projects__header">
                 <span class="projects__header-text">Projects</span>
             </div>
-            .projects_
+            <div class="projects_content">
+                <div class="projects__item">
+                    <div class="project__item-name">Summer house</div>
+                    <img src="https://www.w3schools.com/w3images/house5.jpg" alt="house" class="projects__item-img">
+                </div>
+                <div class="projects__item">
+                    <div class="project__item-name">Brick house</div>
+                    <img src="https://www.w3schools.com/w3images/house2.jpg" alt="house" class="projects__item-img">
+                </div>
+                <div class="projects__item">
+                    <div class="project__item-name">Renovated</div>
+                    <img src="https://www.w3schools.com/w3images/house3.jpg" alt="house" class="projects__item-img">
+                </div>
+                <div class="projects__item">
+                    <div class="project__item-name">Barn house</div>
+                    <img src="https://www.w3schools.com/w3images/house4.jpg" alt="house" class="projects__item-img">
+                </div>
+                <div class="projects__item">
+                    <div class="project__item-name">Summer house</div>
+                    <img src="https://www.w3schools.com/w3images/house2.jpg" alt="house" class="projects__item-img">
+                </div>
+                <div class="projects__item">
+                    <div class="project__item-name">Brick house</div>
+                    <img src="https://www.w3schools.com/w3images/house5.jpg" alt="house" class="projects__item-img">
+                </div>
+                <div class="projects__item">
+                    <div class="project__item-name">Renovated</div>
+                    <img src="https://www.w3schools.com/w3images/house4.jpg" alt="house" class="projects__item-img">
+                </div>
+                <div class="projects__item">
+                    <div class="project__item-name">Barn house</div>
+                    <img src="https://www.w3schools.com/w3images/house3.jpg" alt="house" class="projects__item-img">
+                </div>
+            </div>
         </div>
     </div>
 </body>
