--- a/html/learns/learn_project/W3school/architects/index.html
+++ b/html/learns/learn_project/W3school/architects/index.html
@@ -71,7 +71,7 @@
         </div>
         <div id="about">
             <div class="about__header header-section">
-                <span class="about__header-text header-text-section">About</div>
+                <span class="about__header-text header-text-section">About</span>
             </div>
             <div class="about__content">
                 <p class="about__text text-section">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
