complete about architects

--- a/html/learns/learn_project/W3school/architects/index.html
+++ b/html/learns/learn_project/W3school/architects/index.html
@@ -22,7 +22,7 @@
             </li>
         </ul>
         <div class="header__img-wrap">
-            <img class="header__img" src="https://media.vov.vn/sites/default/files/styles/large/public/2022-02/anh_7_1.jpg" alt="img">
+            <img class="header__img" src="https://www.w3schools.com/w3images/architect.jpg" alt="img">
             <div class="header__img-branch">
                 <span class="header__img-branch-item prefix"><b>BR</b></span>
                 <div class="header__img-branch-item postfix">Architects</div>
@@ -75,6 +75,64 @@
             </div>
             <div class="about__content">
                 <p class="about__text text-section">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+            <div class="about__team">
+                <div class="about__team-item">
+                    <div class="about__team-img-wrap">
+                        <img src="https://www.w3schools.com/w3images/team2.jpg" alt="member" class="about__team-img">
+                    </div>
+                    <div class="about__team-info">
+                        <div class="about__team-heading header-text-section">John Doe</div>
+                        <div class="about__team-sub-heading">CEO & Founder</div>
+                        <p class="about__team-dsc text-section">Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+                        <div class="about__team-btn text-section">Contact</div>
+                    </div>
+                </div>
+                <div class="about__team-item">
+                    <div class="about__team-img-wrap">
+                        <img src="https://www.w3schools.com/w3images/team1.jpg" alt="member" class="about__team-img">
+                    </div>
+                    <div class="about__team-info">
+                        <div class="about__team-heading header-text-section">Jane Doe</div>
+                        <div class="about__team-sub-heading">Architect</div>
+                        <p class="about__team-dsc text-section">Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+                        <div class="about__team-btn text-section">Contact</div>
+                    </div>
+                </div>
+                <div class="about__team-item">
+                    <div class="about__team-img-wrap">
+                        <img src="https://www.w3schools.com/w3images/team3.jpg" alt="member" class="about__team-img">
+                    </div>
+                    <div class="about__team-info">
+                        <div class="about__team-heading header-text-section">Mike Ross</div>
+                        <div class="about__team-sub-heading">Architect</div>
+                        <p class="about__team-dsc text-section">Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+                        <div class="about__team-btn text-section">Contact</div>
+                    </div>
+                </div>
+                <div class="about__team-item">
+                    <div class="about__team-img-wrap">
+                        <img src="https://www.w3schools.com/w3images/team4.jpg" alt="member" class="about__team-img">
+                    </div>
+                    <div class="about__team-info">
+                        <div class="about__team-heading header-text-section">Dan Star</div>
+                        <div class="about__team-sub-heading">Architect</div>
+                        <p class="about__team-dsc text-section">Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+                        <div class="about__team-btn text-section">Contact</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="contact">
+            <div class="contact__header header-section">
+                <span class="contact__header-text header-text-section">Contact</span>
+            </div>
+            <p class="contact_dsc">Lets get in touch and talk about your next project.</p>
+            <div class="contact__form">
+                <input class="contact__input" type="text" name="Name" placeholder="Name">
+                <input class="contact__input" type="email" name="Email" placeholder="Email">
+                <input class="contact__input" type="text" name="Subject" placeholder="Subject">
+                <input class="contact__input" type="text" name="Comment" placeholder="Comment">
             </div>
         </div>
     </div>
