--- a/html/learns/learn_project/W3school/architects/index.html
+++ b/html/learns/learn_project/W3school/architects/index.html
@@ -7,6 +7,7 @@
     <title>Architects</title>
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
 </head>
 <body>
     <div id="home"></div>
@@ -17,8 +18,8 @@
             </li>
             <li class="nav__item">
                 <a href="#projects" class="nav__link">Projects</a>
-                <a href="#" class="nav__link">About</a>
-                <a href="#" class="nav__link">Contact</a>
+                <a href="#about" class="nav__link">About</a>
+                <a href="#contact" class="nav__link">Contact</a>
             </li>
         </ul>
         <div class="header__img-wrap">
@@ -85,7 +86,7 @@
                         <div class="about__team-heading header-text-section">John Doe</div>
                         <div class="about__team-sub-heading">CEO & Founder</div>
                         <p class="about__team-dsc text-section">Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-                        <div class="about__team-btn text-section">Contact</div>
+                        <div class="about__team-btn btn text-section">Contact</div>
                     </div>
                 </div>
                 <div class="about__team-item">
@@ -96,7 +97,7 @@
                         <div class="about__team-heading header-text-section">Jane Doe</div>
                         <div class="about__team-sub-heading">Architect</div>
                         <p class="about__team-dsc text-section">Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-                        <div class="about__team-btn text-section">Contact</div>
+                        <div class="about__team-btn btn text-section">Contact</div>
                     </div>
                 </div>
                 <div class="about__team-item">
@@ -107,7 +108,7 @@
                         <div class="about__team-heading header-text-section">Mike Ross</div>
                         <div class="about__team-sub-heading">Architect</div>
                         <p class="about__team-dsc text-section">Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-                        <div class="about__team-btn text-section">Contact</div>
+                        <div class="about__team-btn btn text-section">Contact</div>
                     </div>
                 </div>
                 <div class="about__team-item">
@@ -118,7 +119,7 @@
                         <div class="about__team-heading header-text-section">Dan Star</div>
                         <div class="about__team-sub-heading">Architect</div>
                         <p class="about__team-dsc text-section">Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-                        <div class="about__team-btn text-section">Contact</div>
+                        <div class="about__team-btn btn text-section">Contact</div>
                     </div>
                 </div>
             </div>
@@ -133,8 +134,17 @@
                 <input class="contact__input" type="email" name="Email" placeholder="Email">
                 <input class="contact__input" type="text" name="Subject" placeholder="Subject">
                 <input class="contact__input" type="text" name="Comment" placeholder="Comment">
+                <button type="submit" class="contact__form-btn btn">
+                    <svg class="contact__form-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M511.6 36.86l-64 415.1c-1.5 9.734-7.375 18.22-15.97 23.05c-4.844 2.719-10.27 4.097-15.68 4.097c-4.188 0-8.319-.8154-12.29-2.472l-122.6-51.1l-50.86 76.29C226.3 508.5 219.8 512 212.8 512C201.3 512 192 502.7 192 491.2v-96.18c0-7.115 2.372-14.03 6.742-19.64L416 96l-293.7 264.3L19.69 317.5C8.438 312.8 .8125 302.2 .0625 289.1s5.469-23.72 16.06-29.77l448-255.1c10.69-6.109 23.88-5.547 34 1.406S513.5 24.72 511.6 36.86z"/></svg>
+                    SEND MESSAGE
+                </button>
             </div>
         </div>
+        <img src="https://www.w3schools.com/w3images/map.jpg" alt="map" id="map">
     </div>
+    <footer id="footer">
+        code by
+        <a target="_blank" class="footer-link" href="https://www.facebook.com/lebakhai13"> lebakhai13</a>
+    </header>
 </body>
 </html>
